--- a/jupyter_remote_desktop_proxy/share/web/noVNC/app/locale/fr.json
+++ b/jupyter_remote_desktop_proxy/share/web/noVNC/app/locale/fr.json
@@ -1,4 +1,5 @@
 {
+    "HTTPS is required for full functionality": "",
     "Connecting...": "En cours de connexion...",
     "Disconnecting...": "Déconnexion en cours...",
     "Reconnecting...": "Reconnexion en cours...",
@@ -39,8 +40,7 @@
     "Reboot": "Redémarrer",
     "Reset": "Réinitialiser",
     "Clipboard": "Presse-papiers",
-    "Clear": "Effacer",
-    "Fullscreen": "Plein écran",
+    "Edit clipboard content in the textarea below.": "",
     "Settings": "Paramètres",
     "Shared Mode": "Mode partagé",
     "View Only": "Afficher uniquement",
@@ -65,6 +65,12 @@
     "Version:": "Version :",
     "Disconnect": "Déconnecter",
     "Connect": "Connecter",
+    "Server identity": "",
+    "The server has provided the following identifying information:": "",
+    "Fingerprint:": "",
+    "Please verify that the information is correct and press \"Approve\". Otherwise press \"Reject\".": "",
+    "Approve": "",
+    "Reject": "",
     "Username:": "Nom d'utilisateur :",
     "Password:": "Mot de passe :",
     "Send Credentials": "Envoyer les identifiants",
