--- a/jupyter_remote_desktop_proxy/share/web/noVNC/app/locale/it.json
+++ b/jupyter_remote_desktop_proxy/share/web/noVNC/app/locale/it.json
@@ -14,6 +14,8 @@
     "Credentials are required": "Le credenziali sono obbligatorie",
     "noVNC encountered an error:": "noVNC ha riscontrato un errore:",
     "Hide/Show the control bar": "Nascondi/Mostra la barra di controllo",
+    "Drag": "",
+    "Move/Drag Viewport": "",
     "Keyboard": "Tastiera",
     "Show Keyboard": "Mostra tastiera",
     "Extra keys": "Tasti Aggiuntivi",
@@ -42,6 +44,7 @@
     "Settings": "Impostazioni",
     "Shared Mode": "Modalità condivisa",
     "View Only": "Sola Visualizzazione",
+    "Clip to Window": "",
     "Scaling Mode:": "Modalità di ridimensionamento:",
     "None": "Nessuna",
     "Local Scaling": "Ridimensionamento Locale",
@@ -58,6 +61,7 @@
     "Automatic Reconnect": "Riconnessione Automatica",
     "Reconnect Delay (ms):": "Ritardo Riconnessione (ms):",
     "Show Dot when No Cursor": "Mostra Punto quando Nessun Cursore",
+    "Logging:": "",
     "Version:": "Versione:",
     "Disconnect": "Disconnetti",
     "Connect": "Connetti",
