--- a/jupyter_remote_desktop_proxy/share/web/noVNC/po/zh_CN.po
+++ b/jupyter_remote_desktop_proxy/share/web/noVNC/po/zh_CN.po
@@ -15,41 +15,57 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../app/ui.js:430
+#: ../app/ui.js:395
 msgid "Connecting..."
 msgstr "连接中..."
 
-#: ../app/ui.js:438
-msgid "Connected (encrypted) to "
-msgstr "已连接（已加密）到"
-
-#: ../app/ui.js:440
-msgid "Connected (unencrypted) to "
-msgstr "已连接（未加密）到"
-
-#: ../app/ui.js:446
+#: ../app/ui.js:402
 msgid "Disconnecting..."
 msgstr "正在断开连接..."
 
-#: ../app/ui.js:450
-msgid "Disconnected"
-msgstr "已断开连接"
-
-#: ../app/ui.js:1052 ../core/rfb.js:248
-msgid "Must set host"
-msgstr "必须设置主机"
-
-#: ../app/ui.js:1101
+#: ../app/ui.js:408
 msgid "Reconnecting..."
 msgstr "重新连接中..."
 
-#: ../app/ui.js:1140
+#: ../app/ui.js:413
+msgid "Internal error"
+msgstr "内部错误"
+
+#: ../app/ui.js:1015
+msgid "Must set host"
+msgstr "请提供主机名"
+
+#: ../app/ui.js:1097
+msgid "Connected (encrypted) to "
+msgstr "已连接到（加密）"
+
+#: ../app/ui.js:1099
+msgid "Connected (unencrypted) to "
+msgstr "已连接到（未加密）"
+
+#: ../app/ui.js:1120
+msgid "Something went wrong, connection is closed"
+msgstr "发生错误，连接已关闭"
+
+#: ../app/ui.js:1123
+msgid "Failed to connect to server"
+msgstr "无法连接到服务器"
+
+#: ../app/ui.js:1133
+msgid "Disconnected"
+msgstr "已断开连接"
+
+#: ../app/ui.js:1146
+msgid "New connection has been rejected with reason: "
+msgstr "连接被拒绝，原因："
+
+#: ../app/ui.js:1149
+msgid "New connection has been rejected"
+msgstr "连接被拒绝"
+
+#: ../app/ui.js:1170
 msgid "Password is required"
 msgstr "请提供密码"
-
-#: ../core/rfb.js:548
-msgid "Disconnect timeout"
-msgstr "超时断开"
 
 #: ../vnc.html:89
 msgid "noVNC encountered an error:"
@@ -61,31 +77,31 @@ msgstr "显示/隐藏控制栏"
 
 #: ../vnc.html:106
 msgid "Move/Drag Viewport"
-msgstr "移动/拖动窗口"
+msgstr "拖放显示范围"
 
 #: ../vnc.html:106
 msgid "viewport drag"
-msgstr "窗口拖动"
+msgstr "显示范围拖放"
 
 #: ../vnc.html:112 ../vnc.html:115 ../vnc.html:118 ../vnc.html:121
 msgid "Active Mouse Button"
-msgstr "启动鼠标按键"
+msgstr "启动鼠标按鍵"
 
 #: ../vnc.html:112
 msgid "No mousebutton"
-msgstr "禁用鼠标按键"
+msgstr "禁用鼠标按鍵"
 
 #: ../vnc.html:115
 msgid "Left mousebutton"
-msgstr "鼠标左键"
+msgstr "鼠标左鍵"
 
 #: ../vnc.html:118
 msgid "Middle mousebutton"
-msgstr "鼠标中键"
+msgstr "鼠标中鍵"
 
 #: ../vnc.html:121
 msgid "Right mousebutton"
-msgstr "鼠标右键"
+msgstr "鼠标右鍵"
 
 #: ../vnc.html:124
 msgid "Keyboard"
@@ -110,10 +126,6 @@ msgstr "Ctrl"
 #: ../vnc.html:136
 msgid "Toggle Ctrl"
 msgstr "切换 Ctrl"
-
-#: ../vnc.html:136
-msgid "Edit clipboard content in the textarea below."
-msgstr "在下面的文本区域中编辑剪贴板内容。"
 
 #: ../vnc.html:139
 msgid "Alt"
@@ -141,19 +153,19 @@ msgstr "发送 Escape 键"
 
 #: ../vnc.html:148
 msgid "Ctrl+Alt+Del"
-msgstr "Ctrl+Alt+Del"
+msgstr "Ctrl-Alt-Del"
 
 #: ../vnc.html:148
 msgid "Send Ctrl-Alt-Del"
-msgstr "发送 Ctrl+Alt+Del 键"
+msgstr "发送 Ctrl-Alt-Del 键"
 
 #: ../vnc.html:156
 msgid "Shutdown/Reboot"
-msgstr "关机/重启"
+msgstr "关机/重新启动"
 
 #: ../vnc.html:156
 msgid "Shutdown/Reboot..."
-msgstr "关机/重启..."
+msgstr "关机/重新启动..."
 
 #: ../vnc.html:162
 msgid "Power"
@@ -165,7 +177,7 @@ msgstr "关机"
 
 #: ../vnc.html:165
 msgid "Reboot"
-msgstr "重启"
+msgstr "重新启动"
 
 #: ../vnc.html:166
 msgid "Reset"
@@ -186,10 +198,6 @@ msgstr "全屏"
 #: ../vnc.html:192 ../vnc.html:199
 msgid "Settings"
 msgstr "设置"
-
-#: ../vnc.html:200
-msgid "Encrypt"
-msgstr "加密"
 
 #: ../vnc.html:202
 msgid "Shared Mode"
@@ -216,69 +224,61 @@ msgid "Local Scaling"
 msgstr "本地缩放"
 
 #: ../vnc.html:216
-msgid "Local Downscaling"
-msgstr "降低本地尺寸"
-
-#: ../vnc.html:217
 msgid "Remote Resizing"
 msgstr "远程调整大小"
 
-#: ../vnc.html:222
+#: ../vnc.html:221
 msgid "Advanced"
 msgstr "高级"
 
-#: ../vnc.html:225
-msgid "Local Cursor"
-msgstr "本地光标"
-
-#: ../vnc.html:229
+#: ../vnc.html:224
 msgid "Repeater ID:"
 msgstr "中继站 ID"
 
-#: ../vnc.html:233
+#: ../vnc.html:228
 msgid "WebSocket"
 msgstr "WebSocket"
 
-#: ../vnc.html:239
+#: ../vnc.html:231
+msgid "Encrypt"
+msgstr "加密"
+
+#: ../vnc.html:234
 msgid "Host:"
 msgstr "主机："
 
-#: ../vnc.html:243
+#: ../vnc.html:238
 msgid "Port:"
 msgstr "端口："
 
-#: ../vnc.html:247
+#: ../vnc.html:242
 msgid "Path:"
 msgstr "路径："
 
-#: ../vnc.html:254
+#: ../vnc.html:249
 msgid "Automatic Reconnect"
 msgstr "自动重新连接"
 
-#: ../vnc.html:257
+#: ../vnc.html:252
 msgid "Reconnect Delay (ms):"
 msgstr "重新连接间隔 (ms)："
 
-#: ../vnc.html:263
+#: ../vnc.html:258
 msgid "Logging:"
 msgstr "日志级别："
 
-#: ../vnc.html:275
+#: ../vnc.html:270
 msgid "Disconnect"
-msgstr "断开连接"
+msgstr "中断连接"
 
-#: ../vnc.html:294
+#: ../vnc.html:289
 msgid "Connect"
 msgstr "连接"
 
-#: ../vnc.html:304
+#: ../vnc.html:299
 msgid "Password:"
 msgstr "密码："
 
-#: ../vnc.html:318
+#: ../vnc.html:313
 msgid "Cancel"
 msgstr "取消"
-
-#: ../vnc.html:334
-msgid "Canvas not supported."
-msgstr "不支持 Canvas。"
